[package]
name = "InnerFS"
version = "1.0.1"
edition = "2021"

[dependencies]
sqlite = "0.36.1"
serde_yml = "0.0.11"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive", "rc"] }
anyhow = "1.0.86"
fuse = "0.3.1"
hmac-sha512 = "1.1.5"
itertools = "0.13.0"
libc = "0.2.155"
time = "0.1.45"
hex = "0.4.3"
log = "0.4.22"
env_logger = "0.11.5"
aws-sdk-s3 = { version = "1.46.0", features = ["behavior-version-latest"] }
aws-config = "1.5.5"
aws-smithy-types = "1.2.2"
aws-smithy-runtime = "1.6.3"
aws-types = "1.3.3"
http = "1.1.0"
tokio = "1.39.3"
aes-gcm = "0.10.3"
pbkdf2 = { version = "0.12.2", features = ["hmac", "std"] }
sha2 = "0.10.8"
clap = { version = "4.5.16", features = ["derive"] }
zip = "2.2.0"
tar = "0.4.41"
flate2 = "1.0.33"